# brosoundml

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: g2p.md  kokoro.md  lexicon.md  morphology.md  multi-stream-sessions.md  parakeet.md  perf-baselines.md  phoneme-spotter.md  phonemizer.md  pos_tagger.md  qwen-asr.md  qwen-tts-weights.md  qwen-tts.md  rave.md  sortformer.md  special_cases.md  wake-word.md  whisper.md
include/brosoundml/: audio.h  bc_resnet.h  bc_resnet2d.h  cluster_diarizer.h  decoder_lora.h  fastconformer.h  gesture_spotter.h  kokoro.h  kokoro_modules.h  listen_bus.h  mel.h  modules.h  parakeet.h  phoneme_data.h  phoneme_model.h  phoneme_spotter.h  qwen_asr.h  qwen_tts.h  rave.h  sensor_hub.h  sortformer.h  speaker_encoder.h  supertonic.h  version.h  wake.h  wake_data.h  whisper.h  whisper_modules.h
include/brosoundml/detail/: json.h
include/brosoundml/g2p/: lexicon.h  morphology.h  normalizer.h  phoneme_adapter.h  phonemizer.h  pos_tagger.h  special_cases.h  tags.h
scripts/: compare-reference.py  convert-kokoro.py  convert-nllb.py  convert-rave.py  convert-sortformer.py  convert-whisper.py  download-brosoundml-data.sh  download-kokoro.sh  download-nllb.sh  download-parakeet.sh  download-qwen-asr.sh  download-qwen-tts.sh  download-sortformer.sh  download-whisper-test-audio.sh  download-whisper.sh  dump-reference.py  level_probe.py  phonemize.py  publish-kokoro-data.sh  rave_reference.py  retrain_wake_rawlevel.sh  sortformer_nemo_ref.py  sortformer_parity.py  sortformer_parity_streaming.py  sortformer_twospk_probe.py
src/: audio.cpp  bc_resnet.cpp  bc_resnet2d.cpp  cluster_diarizer.cpp  decoder_lora.cpp  fastconformer.cpp  fastconformer_modules.h  gesture_spotter.cpp  kokoro.cpp  kokoro_decoder_backward.cpp  kokoro_decoder_backward.h  kokoro_modules.cpp  listen_bus.cpp  mel.cpp  mel_slaney.h  modules.cpp  parakeet.cpp  parakeet_encoder.cpp  parakeet_modules.h  phoneme_data.cpp  phoneme_model.cpp  phoneme_spotter.cpp  qwen_asr.cpp  qwen_asr_decoder.cpp  qwen_asr_decoder.h  qwen_asr_encoder.cpp  qwen_asr_encoder.h  qwen_tts.cpp  qwen_tts_code_predictor.cpp  qwen_tts_code_predictor.h  qwen_tts_codec.cpp  qwen_tts_codec.h  qwen_tts_codec_common.h  qwen_tts_codec_encoder.cpp  qwen_tts_codec_encoder.h  qwen_tts_device.h  qwen_tts_generate.cpp  qwen_tts_generate.h  qwen_tts_speaker_encoder.cpp  qwen_tts_speaker_encoder.h  (+21 more)
src/g2p/: lexicon.cpp  morphology.cpp  normalizer.cpp  phoneme_adapter.cpp  phonemizer.cpp  pos_tagger.cpp  pos_tagger_internal.h  pos_tagger_load.cpp  special_cases.cpp
tests/: CMakeLists.txt  eval_pos_confusion.cpp  pos_golden.txt  test_audio.cpp  test_bc_resnet.cpp  test_bc_resnet2d.cpp  test_bc_resnet2d_train.cpp  test_bc_resnet_train.cpp  test_decoder_lora.cpp  test_gesture_spotter.cpp  test_kokoro.cpp  test_kokoro_decoder_backward.cpp  test_kokoro_modules.cpp  test_lexicon.cpp  test_listen_bus.cpp  test_mel.cpp  test_modules.cpp  test_morphology.cpp  test_normalizer.cpp  test_parakeet.cpp  test_phoneme_adapter.cpp  test_phoneme_data.cpp  test_phoneme_model.cpp  test_phoneme_spotter.cpp  test_phoneme_spotter_e2e.cpp  test_phonemizer.cpp  test_pos_tagger.cpp  test_qwen_asr.cpp  test_qwen_tts.cpp  test_rave.cpp  test_sensor_hub.cpp  test_smoke.cpp  test_sortformer.cpp  test_speaker_encoder.cpp  test_special_cases.cpp  test_supertonic.cpp  test_supertonic_backward.cpp  test_supertonic_encoder.cpp  test_supertonic_encoder_backward.cpp  test_supertonic_spec.cpp  (+8 more)
tests/ref/: gen_qwen_asr_fixture.py  gen_qwen_tts_ar_fixture.py  gen_qwen_tts_clone_fixture.py  gen_qwen_tts_codec_fixture.py  gen_qwen_tts_synth_fixture.py  gen_talker_fixture.py
tools/: build_lexicon.py  build_pos_dataset.py  build_speaker_encoder.cpp  cluster_diarize.cpp  enc_lowlr_scan.sh  enc_lr_scan.sh  enc_stab_scan.sh  kokoro_bench.cpp  parakeet_transcribe.cpp  phoneme_align.cpp  phoneme_aug.cpp  phoneme_calibrate.cpp  phoneme_inspect.cpp  phoneme_melcache.cpp  phoneme_synth.cpp  phoneme_test.cpp  phoneme_train.cpp  prep_kws_corpus.py  qwen_asr_transcribe.cpp  qwen_tts_bench.cpp  qwen_tts_clone.cpp  qwen_tts_roundtrip.cpp  qwen_tts_say.cpp  sortformer_diarize.cpp  sound_units.cpp  speaker_embed_probe.cpp  supertonic_encoder_train.cpp  supertonic_preset_gender.cpp  supertonic_synth.cpp  synth.cpp  transcribe.cpp  wake_inspect.cpp  wake_melcmp.cpp  wake_probe.cpp  wake_synth.cpp  wake_test.cpp  wake_train.cpp
